--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,3 +6,6 @@
           <img src="../../favicon.ico">
         </a>
       </div>
+      <ngb-alert [dismissible]="false">
+        ng-boostrap in the house!
+      </ngb-alert>
