Added : Components, Oauth 2.0, Routing,Navigation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,1 @@
-<h1>RFR</h1>
-<p>Rooms For Rent</p>
-    <!-- logo -->
-    <div class="navbar-brand">
-        <a class="navbar-item">
-          <img src="../../favicon.ico">
-        </a>
-      </div>
-      <ngb-alert [dismissible]="false">
-        ng-boostrap in the house!
-      </ngb-alert>
+<h1>home page</h1>
