--- a/src/app/edit-advert/edit-advert.component.html
+++ b/src/app/edit-advert/edit-advert.component.html
@@ -1,1 +1,32 @@
-<p>edit-advert works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <form (submit)="onSubmit()" action="">
+          <div class="form-group">
+            <input type="text" [(ngModel)]="title" name="title" placeholder="Property Title" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="text" [(ngModel)]="city" name="city" placeholder="City" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="text" [(ngModel)]="owner" name="owner" placeholder="Owner" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="number" [(ngModel)]="bedrooms" name="bedrooms" placeholder="Bedrooms" class="form-control">
+          </div>
+          <div class="form-group">
+            <select name="type" class="form-control" [(ngModel)]="type" id="">
+              <option value="Estate">House</option>
+              <option value="Apartment">Apartment</option>
+              <option value="Mansion">Other</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" [(ngModel)]="price" name="price" placeholder="price">
+          </div>
+          <input type="submit" value="Submit" class="btn btn-success">
+        </form>
+      </div>
+    </div>
+  </div>
+  
