--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -4,6 +4,13 @@ nav, .nav-item{
   padding: 2px;
   margin: 20px;
 }
+.nav-item-greeting{
+  border:solid 3px whitesmoke;
+  border-radius: 14px;
+  padding: 2px;
+  margin: 20px;
+  color: white
+}
 img{
   width: 50px;
   height: 50px;
